# agent-pgolf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MILESTONE_MAP.md  README.md  TEMPLATE.md  VALIDATION.md  WORKFLOW.md  pyproject.toml  session_summary.md  session_summary_2026-04-27.md
.claude/: settings.json
.claude/commands/: analyze-results.md  blog.md  checkpoint.md  morning.md  plan-experiment.md  run-experiment.md  submit-check.md  synthesize.md
.claude/hooks/: post-bash.sh  pre-bash.sh
.claude/skills/: analyze-results.md  blog.md  checkpoint.md  morning.md  plan-experiment.md  run-experiment.md  submit-check.md  synthesize.md
audit/: changelog_v2.md  corrected_leaderboard.md  methodology.md  results.md  reviewer_readiness.md  run_audit.sh  run_audit_v2.sh  writeup.md
audit/per_pr_v2/: obfuscated_recheck_2026-04-29.md
blog/published/: day_00_starting_parameter_golf.md
experiments/: TEMPLATE.md
experiments/exp_001/: analysis.md  config.json
experiments/exp_002/: README.md  analysis.md  config.json  results.json  train_gpt_local.py
experiments/exp_003/: config.json  train_gpt.py
knowledge/: learning_path.md  lessons_learned.md  measurement_integrity_audit.md  research_framing.md  sota_timeline.md
logs/: sota_local.txt  sota_smoke.txt
scripts/: README_canonical_rescore.md  canonical_rescore.py  dashboard.html  dashboard.py  fetch_leaderboard.py  pgolf.py  runpod_setup.py  validate_workflow.py
tests/: conftest.py  test_canonical_rescore.py  test_cli.py  test_hooks.py  test_parser.py  test_report_doctor.py
(+11 files in other folders)
