[project]
name = "pgolf-agent"
version = "1.0.0"
description = "Disciplined experiment pipeline for OpenAI's Parameter Golf competition"
requires-python = ">=3.11"
dependencies = []  # Core CLI uses stdlib only

[project.optional-dependencies]
stats = ["scipy>=1.11"]  # For Welch's t-test p-values
dashboard = ["streamlit>=1.30", "pandas>=2.0"]  # For the optional dashboard
dev = ["pytest>=7.0", "scipy>=1.11"]
all = ["scipy>=1.11", "streamlit>=1.30", "pandas>=2.0", "pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
